# powerit

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  PowerIterations_8hpp.html  PowerIterations_8hpp__incl.map  PowerIterations_8hpp__incl.md5  PowerIterations_8hpp_source.html  annotated.html  classes.html  classpowerit_1_1PowerIterations-members.html  classpowerit_1_1PowerIterations.html  core_8hpp.html  core_8hpp__dep__incl.map  core_8hpp__dep__incl.md5  core_8hpp__incl.map  core_8hpp__incl.md5  core_8hpp_source.html  dir_fe0aa45132a16adab3863dd344b95109.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  namespacemembers.html  namespacemembers_func.html  namespacepowerit.html  namespaces.html  powerit.tag  powerit_8hpp.html  powerit_8hpp__incl.map  powerit_8hpp__incl.md5  powerit_8hpp_source.html  simple_8hpp.html  simple_8hpp__dep__incl.map  simple_8hpp__dep__incl.md5  simple_8hpp__incl.map  simple_8hpp__incl.md5  simple_8hpp_source.html  structpowerit_1_1Options-members.html  structpowerit_1_1Options.html  (+4 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  variables_0.js  variables_1.js
include/powerit/: PowerIterations.hpp  powerit.hpp
include/src/: powerit.hpp
tests/: CMakeLists.txt
tests/src/: PowerIterations.cpp  powerit.cpp
